# Alignment-of-schema-only-and-instance-only-data

./: .gitignore  .releaserc.yml  Dockerfile  README.md  format_files.py  pyproject.toml
.notebook/: get_all_results_of_experiments.ipynb  prepare_dataframes.ipynb  test_generation_with_llms.ipynb
Results_Experiments/GPT_results/: ChEMBL.csv  Magellan.csv  TPC-DI.csv  Wikidata.csv  gpt_with_time.csv
Results_Experiments/Llama_results/: ChEMBL.csv  Magellan.csv  TPC-DI.csv  Wikidata.csv  llama_with_time.csv
Results_Experiments/RQ1- Effectiveness/: effectiveness.ipynb
Results_Experiments/RQ2- Effeciency/: effeciency.ipynb
Results_Experiments/RQ3- Noise/: noise.ipynb
Results_Experiments/RQ4- Ablation/: ablation.ipynb
src/schema_instance/: main.py
src/schema_instance/schema_instance_gpt/: call_schema_instance.py  data_preparation.py  generator.py  matchers.py  metrics_val.py  rules.py  similarity_calculations.py  utils.py
src/schema_instance/schema_instance_llama/: call_schema_instance.py  cross_domain_embeddings.py  generator.py  matchers.py  similarity_calculations.py  utils.py
tests/outputs/: All_results_gpt.csv  All_results_llama.csv
tests/outputs/extanded_attributes/: amazon_google_exp_extended_id.json  amazon_google_exp_extended_manufacturer.json  amazon_google_exp_extended_price.json  amazon_google_exp_extended_title.json
tests/outputs/generated_attributes/: amazon_google_exp_amazon_google_exp_generated_attribute_s2_col_0.json  amazon_google_exp_amazon_google_exp_generated_attribute_s2_col_1.json  (+2 more)
(+40 files in other folders)
